# noise-rs-ffi

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: lib.h  lib.rs
